<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:GoogleMapAndroid="http://schemas.android.com/apk/res-auto" >

    <!--  Delete all markers -->
    <item android:id="@+id/action_delete_markers"
      android:icon="@drawable/ic_action_cancel"
      android:title="@string/action_delete_markers"
      GoogleMapAndroid:showAsAction="always"/>
    
    <!--  Current location -->
    <item android:id="@+id/action_current_location"
      android:icon="@drawable/ic_action_place"
      android:title="@string/action_current_location"
      GoogleMapAndroid:showAsAction="always"/>
    
    <!-- Search widget -->
    <item android:id="@+id/action_search"
      android:icon="@drawable/ic_action_search"
      android:title="@string/action_search"
      GoogleMapAndroid:showAsAction="always"
      GoogleMapAndroid:actionViewClass="android.widget.SearchView"/>
    
	<!-- List of maps styles -->
	    <item
	        android:id="@+id/maps_styles_list"
	        android:icon="@drawable/ic_action_map"
	        GoogleMapAndroid:showAsAction="always"
	        android:title="@string/maps_styles_list">
	        <menu>
		    <!-- Normal map -->
		    <item
		        android:id="@+id/action_normal_map"
		        GoogleMapAndroid:showAsAction="never"
		        android:title="@string/action_normal_map"/>
		
		    <!-- Satellite map -->
		    <item
		        android:id="@+id/action_satellite_map"
		        GoogleMapAndroid:showAsAction="never"
		        android:title="@string/action_satellite_map"/>
		
		    <!-- Terrain map -->
		    <item
		        android:id="@+id/action_terrain_map"
		        GoogleMapAndroid:showAsAction="never"
		        android:title="@string/action_terrain_map"/>
		
		    <!-- Hybrid map -->
		    <item
		        android:id="@+id/action_hybrid_map"
		        GoogleMapAndroid:showAsAction="never"
		        android:title="@string/action_hybrid_map"/>
		    </menu>
	    </item>
</menu>